--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <img class="packs__1" src="./Images/Fotosproductos/Producto 3.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
+            <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
         </div>
     </section>  
     <hr><br>
