--- a/shops.html
+++ b/shops.html
@@ -16,12 +16,7 @@
     <header class="headerShop">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
-                <li><a href="./index.html">Inicio</a>
-                    <ul>
-                        <li><a href="#"> Item 1</a></li>
-                        <li><a href="#"> Item 2</a></li>
-                    </ul>    
-                </li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./AboutUs.html">Nosotros</a></li>
                 <li><a href="./Productos.html">Productos</a></li>
                 <li><a href="./shops.html">Locales</a></li>
