--- a/ContactUs.html
+++ b/ContactUs.html
@@ -16,17 +16,12 @@
     <header class="Hcontact">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
-                <li><a href="./index.html">Inicio</a>
-                    <ul>
-                        <li><a href="#"> Item 1</a></li>
-                        <li><a href="#"> Item 2</a></li>
-                    </ul>    
-                </li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./AboutUs.html">Nosotros</a></li>
                 <li><a href="./Productos.html">Productos</a></li>
                 <li><a href="./shops.html">Locales</a></li>
                 <li><a href="./ContactUs.html">Contacto</a></li>
-            </ul>   
+            </ul>  
         </nav>
     </header>
     <br><br>
