--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body class="ContenedorInicio">
     <header class="headerInicio">
@@ -42,7 +45,7 @@
             <img class="packs__1" src="./Images/Fotosproductos/Producto 3.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
-            <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
+            <img class="packs__1" src="./Images/Fotosproductos/Producto 6.png" alt="SapuCafePack">
         </div>
     </section>  
     <hr><br>
