--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">
 </head>
 <body class="ContenedorInicio">
     <header class="headerInicio">
@@ -38,14 +38,14 @@
             </p>
         </section>
     <hr><br>
-    <section class="packs">
-        <div>
+    <section>
+        <div class="packs">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 2.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 3.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
-            <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 6.png" alt="SapuCafePack">
+            <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
         </div>
     </section>  
     <hr><br>
