--- a/Productos.html
+++ b/Productos.html
@@ -23,29 +23,47 @@
             <li><a href="./ContactUs.html">Contacto</a></li>
         </ul>
         </nav>
-    </header><br>
+    </header>
     <main>
         <section class="productos">
             <div class="card" style="width: 15rem;">
-                <img src="https://github.com/jpocai/Sapu-Cafe/blob/Main/Images/Fotosproductos/Producto%201.png?raw=true" alt="pack cafe">
+                <img src="./Images/Fotosproductos/Producto 1.png" alt="pack cafe">
                 <div class="card-body">
-                  <p class="card-text">Producto 1</p>
+                  <p class="card-text">Pack 1</p>
                 </div>
               </div>
               <div class="card" style="width: 15rem;">
                 <img src="./Images/Fotosproductos/Producto 2.png" class="card-img-top" alt="Producto cafe">
                 <div class="card-body">
-                  <p class="card-text">Producto 2</p>
+                  <p class="card-text">Pack 2</p>
                 </div>
               </div>
               <div class="card" style="width: 15rem;">
                 <img src="./Images/Fotosproductos/Producto 3.png" class="card-img-top" alt="Producto cafe">
                 <div class="card-body">
-                  <p class="card-text">Producto 3</p>
+                  <p class="card-text">Pack 3</p>
+                </div>
+              </div>
+                <div class="card" style="width: 15rem;">
+                <img src="./Images/Fotosproductos/Producto 4.png" alt="pack cafe">
+                <div class="card-body">
+                  <p class="card-text">Pack 4</p>
+                </div>
+              </div>
+              <div class="card" style="width: 15rem;">
+                <img src="./Images/Fotosproductos/Producto 5.png" class="card-img-top" alt="Producto cafe">
+                <div class="card-body">
+                  <p class="card-text">Pack 5</p>
+                </div>
+              </div>
+              <div class="card" style="width: 15rem;">
+                <img src="./Images/Fotosproductos/Producto 6.png" class="card-img-top" alt="Producto cafe">
+                <div class="card-body">
+                  <p class="card-text">Pack 6</p>
                 </div>
               </div>
         </section>
-    </main><br>
+    </main>
     <footer class="footerProd">
         <nav class="p-1">
             <ul class="menu2">
