--- a/AboutUs.html
+++ b/AboutUs.html
@@ -27,17 +27,14 @@
                 </ul>   
             </nav>
         </header>
-    <br><br>
         <main class="main">
             <p>
                 Nos desafiamos a cumplir el objetivo de crear a diario rituales, escogiendo diferentes métodos de preparación de café, para que sean nuestros clientes quienes se sorprenden. 
                 De esta manera, no sólo cultivarán la curiosidad sino que podrán seleccionar el mejor método para su experiencia.
-                
                 Cuando los clientes vienen, ellos encuentran métodos de preparación que nunca habían visto antes. 
-                Desde Sapu Café tratamos de cultivar en ellos la curiosidad y acompañarlos tanto con la experiencia que priorizamos tengan en los locales como en sus hogares al utilizar nuestros productos de excelente calidad para su disfrute. 
+                Desde Sapu Café tratamos de cultivar en ellos la curiosidad y acompañarlos tanto con la experiencia que priorizamos tengan en los locales, como en sus hogares al utilizar nuestros productos de excelente calidad para su disfrute.
             </p>
         </main>
-        <br><br>
         <section class="contGrid">
             <div class="videonos">
                 <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="1" width="100%" height="100%" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -63,7 +60,7 @@
                  <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
                  <li><a href="./ContactUs.html">Contacto</a></li>
             </ul> 
-        </nav><br><br>
+        </nav>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
