--- a/ContactUs.html
+++ b/ContactUs.html
@@ -24,7 +24,6 @@
             </ul>  
         </nav>
     </header>
-    <br><br>
     <main class="Forcoment">
         <section>
             <form action="text">
@@ -35,7 +34,7 @@
                     <label for="Comentarios">Escribe tu comentario</label><br>
                     <textarea name="Comentarios" cols="70" rows="10" placeholder="Deja tus comentarios..."></textarea>
                 </div>
-        </section><br>
+        </section>
                 <div class="Bootform">
                     <form>
                         <div class="m-5">
@@ -62,7 +61,7 @@
                 </div>
     </main>
     <footer class="footcontact">
-        <br><br><hr><br>
+    <hr>
     <nav class="p-1">
         <ul class="menu2">
             <li><a href="./index.html">Home</a></li>
@@ -70,7 +69,7 @@
             <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
             <li><a href="./ContactUs.html">Contact Us</a></li>
         </ul> 
-    </nav><br><br>
+    </nav>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
