--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
             </ul>
         </nav>
     </header>
-    <br><br>
     <main class="mainInicio">
-        <br><br><br>
         <section>
             <p class="intro">
-                El olor al café, a unos granos recién tostados, es la mejor bienvenida que cada día planificamos para brindarles cuando abrimos las puertas de nuestras tiendas y que esperamos tengan al utilizar nuestros productos. Pero eso es sólo el comienzo.
-                Desde el cultivo responsable hasta el tostado, cada detalle en la elaboración de manera artesanal es fundamental para poder disfrutar de una taza de Sapu Café. 
-                Y además de la esencia de los granos, sabemos que la forma en la que se prepara el café tiene un efecto sorprendente en el sabor de cada taza y define su cuerpo.
+                El olor al café, unos granos recién tostados, esa es la mejor bienvenida que cada día planificamos para brindarles a nuestros clientes cuando abrimos las puertas de nuestras tiendas, y que esperamos puedan disfrutar al degustar nuestros productos. 
+                Pero eso es sólo el comienzo. Desde el cultivo responsable hasta el tostado, cada detalle en la elaboración, se realiza de forma artesanal. 
+                Además de la esencia de los granos, sabemos que la forma en la que se prepara nuestro café, tiene un efecto sorprendente en el sabor de cada taza.
             </p>
         </section>
-    <hr><br>
+    <hr>
     <section>
         <div class="packs">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
@@ -48,7 +46,7 @@
             <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
         </div>
     </section>  
-    <hr><br>
+    <hr>
     </main>
     <footer class="footerInicio">
         <section class="sucursales">
@@ -57,7 +55,6 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="700" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
-        <br><hr><br>
         <nav class="p-1">
             <ul class="menu2">
                 <li><a href="#" id="arriba">Inicio</a></li>
@@ -65,7 +62,7 @@
                 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
                 <li><a href="./ContactUs.html">Contacto</a></li>
             </ul> 
-        </nav><br><br>
+        </nav>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
