--- a/Productos.html
+++ b/Productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
     <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, cafeteria, coofee shop, desayuno">
-    <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
+    <link rel= "shortcut icon" href="./Images/favicon_io/LogoSapu32.png">
     <title>SapuCafe - Coofee shop - Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
@@ -16,6 +16,7 @@
     <header class="headerProd">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
           <ul>
+            <img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe">
             <li><a href="./index.html">Inicio</a></li>
             <li><a href="./AboutUs.html">Nosotros</a></li>
             <li><a href="./Productos.html">Productos</a></li>
