--- a/AboutUs.html
+++ b/AboutUs.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
     <body class="ContenedorAbout">
         <header class="HAbout">
@@ -30,10 +30,10 @@
         </header>
         <main class="main">
             <p>
-                Nos desafiamos a cumplir el objetivo de crear a diario rituales, escogiendo diferentes métodos de preparación de café, para que sean nuestros clientes quienes se sorprenden. 
+                Nos desafiamos a cumplir el objetivo de crear a diario rituales, escogiendo diferentes métodos de preparación de café, para que sean nuestros clientes quienes se sorprenden. <br>
                 De esta manera, no sólo cultivarán la curiosidad sino que podrán seleccionar el mejor método para su experiencia.
-                Cuando los clientes vienen, ellos encuentran métodos de preparación que nunca habían visto antes. 
-                Desde Sapu Café tratamos de cultivar en ellos la curiosidad y acompañarlos tanto con la experiencia que priorizamos tengan en los locales, como en sus hogares al utilizar nuestros productos de excelente calidad para su disfrute.
+                Cuando los clientes vienen, encuentran métodos de preparación que nunca habían visto antes. <br>
+                Desde "Sapu Café" tratamos de cultivar en ellos la curiosidad, y acompañarlos tanto con la experiencia que priorizamos tengan en los locales, como en sus hogares al utilizar nuestros productos de excelente calidad para su disfrute.
             </p>
         </main>
         <section class="contGrid">
