--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body class="ContenedorInicio">
     <header class="headerInicio">
@@ -31,8 +31,8 @@
     <main class="mainInicio">
         <section>
             <p class="intro">
-                El olor al café, unos granos recién tostados, esa es la mejor bienvenida que cada día planificamos para brindarles a nuestros clientes cuando abrimos las puertas de nuestras tiendas, y que esperamos puedan disfrutar al degustar nuestros productos. 
-                Pero eso es sólo el comienzo. Desde el cultivo responsable hasta el tostado, cada detalle en la elaboración, se realiza de forma artesanal. 
+                El olor al café, unos granos recién tostados, esa es la mejor bienvenida que cada día planificamos para brindarles a nuestros clientes cuando abrimos las puertas de nuestras tiendas, y que esperamos puedan disfrutar al degustar nuestros productos. <br> 
+                Pero eso es sólo el comienzo, desde el cultivo responsable hasta el tostado, cada detalle en la elaboración, se realiza de forma artesanal. 
                 Además de la esencia de los granos, sabemos que la forma en la que se prepara nuestro café, tiene un efecto sorprendente en el sabor de cada taza.
             </p>
         </section>
