--- a/AboutUs.html
+++ b/AboutUs.html
@@ -17,16 +17,33 @@
 </head>
     <body class="ContenedorAbout">
         <header class="HAbout">
-            <nav class="menuinicial animate__animated animate__bounceInLeft">
-                <ul>
-                    <img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe">
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./AboutUs.html">Nosotros</a></li>
-                    <li><a href="./Productos.html">Productos</a></li>
-                    <li><a href="./shops.html">Locales</a></li>
-                    <li><a href="./ContactUs.html">Contacto</a></li>
-                </ul>   
-            </nav>
+            <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
+                <div class="container-fluid">
+                  <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-normal">
+                      <li class="nav-item">
+                        <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-info" href="./Productos.html">Productos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-info" href="./shops.html">Locales</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </header>
         <main class="main">
             <p>
@@ -36,22 +53,31 @@
                 Desde "Sapu Café" tratamos de cultivar en ellos la curiosidad, y acompañarlos tanto con la experiencia que priorizamos tengan en los locales, como en sus hogares al utilizar nuestros productos de excelente calidad para su disfrute.
             </p>
         </main>
-        <section class="contGrid">
-            <div class="videonos">
-                <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="1" width="100%" height="100%" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <section class="fotos">
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./Images/Fotos Sitio/cafe.exterior.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./Images/Fotos Sitio/cafe.granos.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./Images/Fotos Sitio/Granos y taza.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./Images/Fotos Sitio/tazas.de.cafe.png" class="d-block w-100" alt="...">
+              </div>
             </div>
-            <div class="foto1">
-                <img src="./Images/Fotos Sitio/tazas.de.cafe.png" alt="tazas.de.cafe">
-            </div>
-            <div class="foto2">
-                <img src="./Images/Fotos Sitio/cafe.exterior.png" alt="cafe.exterior">
-            </div>
-            <div class="foto3">
-                <img src="./Images/Fotos Sitio/cafeteria.png" alt="cafeteria">
-            </div>
-            <div class="foto4">
-                <img src="./Images/Fotos Sitio/cafe.granos.png" alt="cafe.granos">
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </section>
     <footer class="Fabout">
         <nav class="p-1">
