--- a/Productos.html
+++ b/Productos.html
@@ -14,16 +14,33 @@
 </head>
 <body class="prodContainer">
     <header class="headerProd">
-        <nav class="menuinicial animate__animated animate__bounceInLeft">
-          <ul>
-            <img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe">
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./AboutUs.html">Nosotros</a></li>
-            <li><a href="./Productos.html">Productos</a></li>
-            <li><a href="./shops.html">Locales</a></li>
-            <li><a href="./ContactUs.html">Contacto</a></li>
-        </ul>
-        </nav>
+      <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
+        <div class="container-fluid">
+          <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 fw-normal">
+              <li class="nav-item">
+                <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-info" href="./Productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-info" href="./shops.html">Locales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
         <section class="productos">
