--- a/ContactUs.html
+++ b/ContactUs.html
@@ -50,7 +50,7 @@
                 </h2>
                 <div class="comments m-5">
                     <label for="Comentarios"></label><br>
-                    <textarea name="Comentarios" cols="25" rows="10" placeholder="Deja tus comentarios..."></textarea>
+                    <textarea name="Comentarios" cols="auto" rows="10" placeholder="Deja tus comentarios..."></textarea>
                 </div>
         </section>
                 <div class="Bootform">
