--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
         <div class="container-fluid">
           <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
-          <button class="navbar-toggler" type="button-info" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-normal">
+            <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
               <li class="nav-item">
                 <a class="nav-link text-info" aria-current="page" href="./index.html">Inicio</a>
               </li>
@@ -33,9 +33,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-info" href="./Productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-info" href="./shops.html">Locales</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
@@ -67,7 +64,7 @@
     <hr>
     <section class="videoIntro">
       <div class="videonos">
-        <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="1" width="50%" height="100%" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="1" width="500" height="350" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <hr>
     </section>
