--- a/Productos.html
+++ b/Productos.html
@@ -21,7 +21,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 fw-normal">
+            <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
               <li class="nav-item">
                 <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
               </li>
@@ -30,9 +30,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-info" href="./Productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-info" href="./shops.html">Locales</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
