--- a/ContactUs.html
+++ b/ContactUs.html
@@ -78,13 +78,13 @@
     <footer class="footcontact">
     <hr>
     <nav class="p-1">
-        <ul class="menu2">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="https://es-la.facebook.com/" target="_blank">Facebook</a></li>
-            <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-            <li><a href="./ContactUs.html">Contact Us</a></li>
-        </ul> 
-    </nav>
+      <ul class="menu2">
+          <li><a href="#" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
+          <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
+          <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
+          <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
+      </ul> 
+  </nav>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
