--- a/Productos.html
+++ b/Productos.html
@@ -40,43 +40,45 @@
       </nav>
     </header>
     <main>
-        <section class="productos">
+        <section class="productos1">
             <div class="card" style="width: 15rem;">
                 <img src="./Images/Fotosproductos/Producto 1.png" alt="pack cafe">
                 <div class="card-body">
-                  <p class="card-text">Pack 1</p>
+                  <p class="card-text">Cafe Torrado</p>
                 </div>
               </div>
               <div class="card" style="width: 15rem;">
                 <img src="./Images/Fotosproductos/Producto 2.png" class="card-img-top" alt="Producto cafe">
                 <div class="card-body">
-                  <p class="card-text">Pack 2</p>
+                  <p class="card-text">Café Molido
                 </div>
               </div>
               <div class="card" style="width: 15rem;">
                 <img src="./Images/Fotosproductos/Producto 3.png" class="card-img-top" alt="Producto cafe">
                 <div class="card-body">
-                  <p class="card-text">Pack 3</p>
+                  <p class="card-text">Café Tostado</p>
                 </div>
               </div>
-                <div class="card" style="width: 15rem;">
-                <img src="./Images/Fotosproductos/Producto 4.png" alt="pack cafe">
-                <div class="card-body">
-                  <p class="card-text">Pack 4</p>
-                </div>
-              </div>
-              <div class="card" style="width: 15rem;">
-                <img src="./Images/Fotosproductos/Producto 5.png" class="card-img-top" alt="Producto cafe">
-                <div class="card-body">
-                  <p class="card-text">Pack 5</p>
-                </div>
-              </div>
-              <div class="card" style="width: 15rem;">
-                <img src="./Images/Fotosproductos/Producto 6.png" class="card-img-top" alt="Producto cafe">
-                <div class="card-body">
-                  <p class="card-text">Pack 6</p>
-                </div>
-              </div>
+            </div>
+        </section>
+        <section class="productos2">
+          <div class="card" style="width: 15rem;">
+            <img src="./Images/Fotosproductos/Producto 4.png" alt="pack cafe">
+            <div class="card-body">
+              <p class="card-text">Pack Café Molido</p>
+            </div>
+          </div>
+          <div class="card" style="width: 15rem;">
+            <img src="./Images/Fotosproductos/Producto 5.png" class="card-img-top" alt="Producto cafe">
+            <div class="card-body">
+              <p class="card-text">Sapu Edición Limitada</p>
+            </div>
+          </div>
+          <div class="card" style="width: 15rem;">
+            <img src="./Images/Fotosproductos/Producto 6.png" class="card-img-top" alt="Producto cafe">
+            <div class="card-body">
+              <p class="card-text">Pack Promo</p>
+            </div>
         </section>
     </main>
     <footer class="footerProd">
