--- a/Productos.html
+++ b/Productos.html
@@ -84,7 +84,7 @@
     <footer class="footerProd">
       <nav class="p-1">
         <ul class="menu2">
-            <li><a href="#" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
+            <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
             <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
             <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
             <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
