--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
         <section>
             <p class="intro">
                 El olor al café, unos granos recién tostados, esa es la mejor bienvenida que cada día planificamos para brindarles a nuestros clientes cuando abrimos las puertas de nuestras tiendas, y que esperamos puedan disfrutar al degustar nuestros productos. <br> 
-                Pero eso es sólo el comienzo, desde el cultivo responsable hasta el tostado, cada detalle en la elaboración, se realiza de forma artesanal. 
+                Pero eso es sólo el comienzo, desde el cultivo responsable hasta el tostado, cada detalle en la elaboración se realiza de forma artesanal. 
                 Además de la esencia de los granos, sabemos que la forma en la que se prepara nuestro café, tiene un efecto sorprendente en el sabor de cada taza.
             </p>
         </section>
     <hr>
     <section>
+      <h2>Productos destacados</h2>
         <div class="packs">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 2.png" alt="SapuCafePack">
@@ -70,12 +71,13 @@
     </main>
     <footer class="footerInicio">
       <section class="sucursal">
+        <h4>Podes encontrarnos en...</h4>
         <div class="sucursal__ubi">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <nav class="p-1">
             <ul class="menu2">
-                <li><a href="#" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
+                <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
                 <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
                 <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
