--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
     <hr>
     <section>
-      <h2>Productos destacados</h2>
+      <h2 class="tit__pack">Productos destacados</h2>
         <div class="packs">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
             <img class="packs__1" src="./Images/Fotosproductos/Producto 2.png" alt="SapuCafePack">
@@ -75,6 +75,7 @@
         <div class="sucursal__ubi">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        <hr>
         <nav class="p-1">
             <ul class="menu2">
                 <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
