--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
-    <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, cafeteria, coofee shop, desayuno">
+    <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, coofee shop, desayuno, breakfast">
     <link rel= "shortcut icon" href="./Images/favicon_io/LogoSapu32.png">
     <title>SapuCafe - Coofee shop - Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body class="contenedorInicio">
     <header class="headerInicio">
