--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body class="contenedorInicio">
     <header class="headerInicio">
@@ -51,15 +49,17 @@
         </section>
     <hr>
     <section>
-      <h2 class="tit__pack">Productos destacados</h2>
-        <div class="packs">
-            <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
-            <img class="packs__1" src="./Images/Fotosproductos/Producto 2.png" alt="SapuCafePack">
-            <img class="packs__1" src="./Images/Fotosproductos/Producto 3.png" alt="SapuCafePack">
-            <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
-            <img class="packs__1" src="./Images/Fotosproductos/Producto 6.png" alt="SapuCafePack">
-            <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
-        </div>
+      <h2 class="tit__pack">
+        Productos destacados
+      </h2>
+      <div class="packs">
+          <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
+          <img class="packs__1" src="./Images/Fotosproductos/Producto 2.png" alt="SapuCafePack">
+          <img class="packs__1" src="./Images/Fotosproductos/Producto 3.png" alt="SapuCafePack">
+          <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
+          <img class="packs__1" src="./Images/Fotosproductos/Producto 6.png" alt="SapuCafePack">
+          <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
+      </div>
     </section>  
     <hr>
     <section class="videoIntro">
@@ -70,9 +70,11 @@
     </main>
     <footer class="footerInicio">
       <section class="sucursal">
-        <h4>Podes encontrarnos en...</h4>
+        <h4 class="tit__suc">
+          Podes encontrarnos en...
+        </h4>
         <div class="sucursal__ubi">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <hr>
         <nav class="p-1">
