--- a/Productos.html
+++ b/Productos.html
@@ -40,6 +40,9 @@
       </nav>
     </header>
     <main>
+      <h2 class="tit__prod">
+        Nuestros productos
+      </h2>
         <section class="productos1">
             <div class="card" style="width: 15rem;">
                 <img src="./Images/Fotosproductos/Producto 1.png" alt="pack cafe">
